--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <div id="dashboard" class="content active">
         <h1>仪表板</h1>
-        <p>这里是仪表板内容。</p>
+        <p>这是一个测试页面。可以更改源代码。</p>
     </div>
     <div id="user-management" class="content">
         <h1>用户管理</h1>
