--- a/index.html
+++ b/index.html
@@ -58,27 +58,22 @@
     <div class="sidebar">
         <h2>ChemPrompter</h2>
         <ul>
-            <li onclick="showContent('dashboard')">仪表板</li>
-            <li onclick="showContent('user-management')">用户管理</li>
-            <li onclick="showContent('settings')">设置</li>
-            <li onclick="showContent('reports')">报告</li>
+            <li onclick="showContent('browse-tab')">浏览</li>
+            <li onclick="showContent('edit-tab')">编辑</li>
+            <li onclick="showContent('settings-tab')">设置</li>
         </ul>
     </div>
-    <div id="dashboard" class="content active">
-        <h1>仪表板</h1>
-        <p>这是一个测试页面。可以更改源代码。</p>
+    <div id="browse-tab" class="content active">
+        <h1>所有反应</h1>
+        <p>Here may goes a scroll list of reactions</p>
     </div>
-    <div id="user-management" class="content">
-        <h1>用户管理</h1>
-        <p>这里是用户管理内容。</p>
+    <div id="edit-tab" class="content">
+        <h1>反应信息</h1>
+        <p>这里大概能编辑一个反应的信息 反应物 条件 记录/计算投料比</p>
     </div>
-    <div id="settings" class="content">
+    <div id="settings-tab" class="content">
         <h1>设置</h1>
-        <p>这里是设置内容。</p>
-    </div>
-    <div id="reports" class="content">
-        <h1>报告</h1>
-        <p>这里是报告内容。</p>
+        <p>有啥可设置的呢</p>
     </div>
 
     <script>
